reparar barra de navegacion, agregar bootstrap y agregar vista stock

--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ form .form-control {
 }
 
 /* Showcase */
-#showcase {
+/* #showcase {
   background: /img/background.jpeg
   background-repeat: no-repeat;
   background-size: cover;
@@ -176,7 +176,7 @@ form .form-control {
   padding-top: 200px;
   padding-bottom: 90px;
   color: #fff;
-}
+} */
 
 #showcase h1 {
   padding-left: 300px;
