--- a/views/stock.html
+++ b/views/stock.html
@@ -1,11 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen and (max-width:768px)" href="css/mobile.css">
+    <link rel="icon" href="logoDeltha.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Popper.js (si es necesario) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.4/umd/popper.min.js"></script>
+
+    <!-- Bootstrap JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <title>Deltha Car´s</title>
 </head>
+
 <body>
-    
+    <section>
+        <header>
+            <nav class="row navbar navbar-expand-lg bg-dark">
+                <div class="container-fluid">
+                    <div class="container-icon" style="margin-left: 20px;">
+                        <a class="navbar-brand" href="#">
+                            <img src="/img/logoDeltha.ico" alt="Bootstrap" width="70" height="70"> <span
+                                class="text-white">DELTHA<span class="text-danger">CAR´S</span></span>
+                        </a>
+                    </div>
+                    <button class="navbar-toggler " style="margin-right: 10px; border-color: white;" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white"
+                                class="bi bi-chevron-double-down" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                                <path fill-rule="evenodd"
+                                    d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                            </svg>
+                        </span>
+                    </button>
+                    <div class="flex-row-reverse container-fluid collapse navbar-collapse" style="margin-left: 20px;"
+                        id="navbarNavAltMarkup">
+                        <div class="navbar-nav ml-auto">
+                            <a class="nav-link text-white" href="../index.html">Inicio</a>
+                            <a class="nav-link text-white" href="#">Stock DELTHA CAR´S</a>
+                            <a class="nav-link text-white" href="services.html">Financiación</a>
+                            <a class="nav-link text-white" href="about.html">Contacto</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </header>
+    </section>
+
+    <!-- Automoviles -->
+    <div>
+        <ul class="nav nav-tabs" id="myTabs">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#tab1">Tab 1</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#tab2">Tab 2</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#tab3">Tab 3</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+            </li>
+        </ul>
+
+        <div class="tab-content">
+            <div class="tab-pane fade show active" id="tab1">
+                <!-- Contenido para la pestaña 1 -->
+                <p>Este es el contenido de la pestaña 1.</p>
+            </div>
+            <div class="tab-pane fade" id="tab2">
+                <!-- Contenido para la pestaña 2 -->
+                <p>Este es el contenido de la pestaña 2.</p>
+            </div>
+            <div class="tab-pane fade" id="tab3">
+                <!-- Contenido para la pestaña 3 -->
+                <p>Este es el contenido de la pestaña 3.</p>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <script>
+        $(document).ready(function () {
+            $('#myTabs a').click(function (e) {
+                e.preventDefault();
+                $(this).tab('show');
+            });
+        });
+    </script>
 </body>
+
 </html>
