reparar rutas de imagenes y modificar categorias de los objetos js

--- a/views/stock.html
+++ b/views/stock.html
@@ -31,7 +31,7 @@
                 <div class="container-fluid">
                     <div class="container-icon" style="margin-left: 20px;">
                         <a class="navbar-brand" href="#">
-                            <img src="/img/logoDeltha.ico" alt="Bootstrap" width="70" height="70"> <span
+                            <img src="../img/logoD.png" alt="Bootstrap" width="70" height="70"> <span
                                 class="text-white">DELTHA<span class="text-danger">CAR´S</span></span>
                         </a>
                     </div>
@@ -75,8 +75,9 @@
                 <a class="nav-link" href="#tab3">Tab 3</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link" href="#tab4">Tab 4</a>
             </li>
+            
         </ul>
 
         <div class="tab-content">
@@ -91,6 +92,10 @@
             <div class="tab-pane fade" id="tab3">
                 <!-- Contenido para la pestaña 3 -->
                 <p>Este es el contenido de la pestaña 3.</p>
+            </div>
+            <div class="tab-pane fade" id="tab4">
+                <!-- Contenido para la pestaña 3 -->
+                <p>Este es el contenido de la pestaña 4.</p>
             </div>
         </div>
     </div>
