avanzar en el contenido del index y funcionalidad del js

--- a/views/stock.html
+++ b/views/stock.html
@@ -18,13 +18,14 @@
     <!-- Popper.js (si es necesario) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.4/umd/popper.min.js"></script>
 
-    <!-- Bootstrap JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
     <title>Deltha Car´s</title>
+    <!-- Link CSS JS -->
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 
 <body>
+
+    <!-- Nav -->
     <section>
         <header>
             <nav class="row navbar navbar-expand-lg bg-dark">
@@ -77,7 +78,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#tab4">Tab 4</a>
             </li>
-            
+
         </ul>
 
         <div class="tab-content">
@@ -100,6 +101,157 @@
         </div>
     </div>
 
+    <!-- Prodcutos -->
+
+    <div class="btn-group dropend">
+        <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropend
+        </button>
+        <ul class="dropdown-menu">
+            <!-- Dropdown menu links -->
+            <li><a class="dropdown-item" href="#tab1P">Abrazaderas</a></li>
+            <li><a class="dropdown-item" href="#tab2P">Alternadores</a></li>
+            <li><a class="dropdown-item" href="#tab3P">Arranques</a></li>
+            <li><a class="dropdown-item" href="#tab4P">Bobinas</a></li>
+            <li><a class="dropdown-item" href="#tab5P">Bombilleras Led</a></li>
+            <li><a class="dropdown-item" href="#tab6P">Bujias</a></li>
+            <li><a class="dropdown-item" href="#tab7P">Cintas Led</a></li>
+            <li><a class="dropdown-item" href="#tab8P">Conectores</a></li>
+            <li><a class="dropdown-item" href="#tab9P">Correa Accesorios</a></li>
+            <li><a class="dropdown-item" href="#tab10P">Correa Repartición</a></li>
+            <li><a class="dropdown-item" href="#tab11p">Elevadores Relay V12</a></li>
+            <li><a class="dropdown-item" href="#tab12P">Embolo</a></li>
+            <li><a class="dropdown-item" href="#tab13P">Filtros Gasolina</a></li>
+            <li><a class="dropdown-item" href="#tab14P">Filtros Aire</a></li>
+            <li><a class="dropdown-item" href="#tab15P">Inyectores</a></li>
+            <li><a class="dropdown-item" href="#tab16P">Liquido Frenos</a></li>
+            <li><a class="dropdown-item" href="#tab17P">Mangueras</a></li>
+            <li><a class="dropdown-item" href="#tab18P">Patin Kit Repartición</a></li>
+            <li><a class="dropdown-item" href="#tab19P">Pines</a></li>
+            <li><a class="dropdown-item" href="#tab20P">Porta Escobillas</a></li>
+            <li><a class="dropdown-item" href="#tab21P">Retenedores</a></li>
+            <li><a class="dropdown-item" href="#tab22P">Sensores</a></li>
+            <li><a class="dropdown-item" href="#tab23P">Tacometro</a></li>
+            <li><a class="dropdown-item" href="#tab24P">Terminales</a></li>
+            <li><a class="dropdown-item" href="#tab25P">Tornilleria Cilindrica</a></li>
+            <li><a class="dropdown-item" href="#tab26P">Varios</a></li>
+            <li><a class="dropdown-item" href="#tab27P">Vendix</a></li>
+            <li><a class="dropdown-item" href="#tab28P">Wasa</a></li>
+        </ul>
+    </div>
+
+
+
+    <div class="tab-content">
+        <div class="tab-pane fade show active" id="tab1P">
+            <!-- Contenido para la pestaña 1 -->
+            <p>Este es el contenido de la pestaña 1.</p>
+        </div>
+        <div class="tab-pane fade" id="tab2P">
+            <!-- Contenido para la pestaña 2 -->
+            <p>Este es el contenido de la pestaña 2.</p>
+        </div>
+        <div class="tab-pane fade" id="tab3P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 3.</p>
+        </div>
+        <div class="tab-pane fade" id="tab4P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab5P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab6P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab7P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab8P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab9P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab10P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab11P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab12P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab13P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab14P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab15P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab16P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab17P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab18P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab19P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab20P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab21P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab22P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab23P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab24P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab25P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab26P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+        <div class="tab-pane fade" id="tab27P">
+            <!-- Contenido para la pestaña 3 -->
+            <p>Este es el contenido de la pestaña 4.</p>
+        </div>
+    </div>
 
 
 
@@ -111,6 +263,19 @@
             });
         });
     </script>
+
+    <script>
+        $(document).ready(function () {
+            $('.dropdown-item').click(function () {
+                var targetTabId = $(this).attr('href');
+                $('.tab-content .tab-pane').removeClass('show active');
+                $(targetTabId).addClass('show active');
+            });
+        });
+    </script>
+
+    <!-- Bootstrap JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
