agregar color de fondo requerido para todas las paginas

--- a/views/stock.html
+++ b/views/stock.html
@@ -21,6 +21,7 @@
     <title>Deltha Car´s</title>
     <!-- Link CSS JS -->
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 
 <body>
