--- a/views/about.html
+++ b/views/about.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" media="screen and (max-width:768px)" href="css/mobile.css">
   <title>BizSecond | About</title>
+  <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
 
