--- a/views/services.html
+++ b/views/services.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,16 @@
   <link rel="stylesheet" media="screen and (max-width:768px)" href="css/mobile.css">
   <title>BizSecond | Services</title>
   <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+    <!-- Link Js CSS -->
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
+
 <body>
 
   <header id="bodyheader">
@@ -32,23 +40,29 @@
       <div class="services-row">
         <div class="services-box">
           <img src="img/service-1.jpg" alt="">
-          <p>In ipsum ac tincidunt volutpat lacinia. Egestas quis neque, volutpat elementum. Scelerisque massa aliquam tellus sit nibh. Dignissim ipsum viverra id cursus adipiscing.</p>
+          <p>In ipsum ac tincidunt volutpat lacinia. Egestas quis neque, volutpat elementum. Scelerisque massa aliquam
+            tellus sit nibh. Dignissim ipsum viverra id cursus adipiscing.</p>
         </div>
         <div class="services-box">
           <img src="img/service-2.jpg" alt="">
-          <p>In ipsum ac tincidunt volutpat lacinia. Egestas quis neque, volutpat elementum. Scelerisque massa aliquam tellus sit nibh. Dignissim ipsum viverra id cursus adipiscing.</p>
+          <p>In ipsum ac tincidunt volutpat lacinia. Egestas quis neque, volutpat elementum. Scelerisque massa aliquam
+            tellus sit nibh. Dignissim ipsum viverra id cursus adipiscing.</p>
         </div>
         <div class="services-box">
           <img src="img/service-3.jpg" alt="">
-          <p>In ipsum ac tincidunt volutpat lacinia. Egestas quis neque, volutpat elementum. Scelerisque massa aliquam tellus sit nibh. Dignissim ipsum viverra id cursus adipiscing.</p>
+          <p>In ipsum ac tincidunt volutpat lacinia. Egestas quis neque, volutpat elementum. Scelerisque massa aliquam
+            tellus sit nibh. Dignissim ipsum viverra id cursus adipiscing.</p>
         </div>
-      </div> 
+      </div>
     </div>
   </section>
 
   <footer id="mainfooter">
-    <a href="https://twitter.com/irimaya?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @irimaya</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <a href="https://twitter.com/irimaya?ref_src=twsrc%5Etfw" class="twitter-follow-button"
+      data-show-count="false">Follow @irimaya</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </footer>
 
 </body>
+
 </html>
