--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,16 @@
     padding-top: 150px;
 }
 
+.mision-vision-title{
+    font-family: 'Teko', Helvetica, Arial, Lucida, sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 7vw;
+    letter-spacing: 0.05em;
+    line-height: 0.9em;
+    text-shadow: 0em 0.18em 0.27em rgba(0, 0, 0, 0.38);
+}
+
 .descripcion-delta {
     font-size: 15px;
     text-align: center;
@@ -102,9 +112,21 @@
     clip-path: polygon(0% 0%, 100% 0%, 50% 30%);
     background-color: #ffffff;
   }
-  
-  
 
+  /* Mision Vision */
+
+.mision-vision-container{
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+.mision-vision-container{
+    margin: 40px;
+}
+
+.mision-vision-title{
+    font-size: 2.5rem;
+}
 
 
 
