--- a/css/index.css
+++ b/css/index.css
@@ -128,6 +128,22 @@
     font-size: 2.5rem;
 }
 
+@keyframes slideInRight {
+    from {
+        transform: translateX(100%);
+        visibility: visible;
+    }
+
+    to {
+        transform: translateX(0);
+    }
+}
+
+.slideInRight {
+    animation: slideInRight 1s forwards;
+}
+
+
 
 
 /* Original: https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&#038;subset=latin,latin-ext&#038;display=swap */
