arreglar redireccionamiendo de la barra de navegacion

--- a/views/financiacion.html
+++ b/views/financiacion.html
@@ -55,10 +55,10 @@
                     </button>
                     <div class="flex-row-reverse container-fluid collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav ml-auto">
-                            <a class="link-pages nav-link" href="#">Inicio</a>
-                            <a class="link-pages nav-link" href="views/stock.html">Stock DELTHA CARS</a>
-                            <a class="link-pages nav-link" href="views/services.html">Financiación</a>
-                            <a class="link-pages nav-link" href="views/about.html">Contacto</a>
+                            <a class="link-pages nav-link" href="../index.html">Inicio</a>
+                            <a class="link-pages nav-link" href="./stock.html">Stock DELTHA CARS</a>
+                            <a class="link-pages nav-link" href="#">Financiación</a>
+                            <a class="link-pages nav-link" href="./about.html">Contacto</a>
                         </div>
                     </div>
                 </div>
@@ -234,11 +234,11 @@
                     <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-141"><a href="#">Inicio</a>
                     </li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-139"><a
-                        href="./views/stock.html">Deltacars Stock</a></li>
+                        href="./stock.html">Deltacars Stock</a></li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-403"><a
-                        href="./views/about.html">Financiación</a></li>
+                        href="./about.html">Financiación</a></li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-138"><a
-                        href="/views/contact.html">Contacto</a></li>
+                        href="./contact.html">Contacto</a></li>
                   </ul>
                 </div>
               </div>
