--- a/views/stock.html
+++ b/views/stock.html
@@ -25,6 +25,12 @@
 </head>
 
 <body>
+    <section class="stock cars">
+        <div class="container">
+            
+        </div>
+    </section>
+
 
     <!-- Nav -->
     <section>
@@ -55,8 +61,8 @@
                         <div class="navbar-nav ml-auto">
                             <a class="nav-link text-white" href="../index.html">Inicio</a>
                             <a class="nav-link text-white" href="#">Stock DELTHA CAR´S</a>
-                            <a class="nav-link text-white" href="services.html">Financiación</a>
-                            <a class="nav-link text-white" href="about.html">Contacto</a>
+                            <a class="nav-link text-white" href="./financiacion.html">Financiación</a>
+                            <a class="nav-link text-white" href="./about.html">Contacto</a>
                         </div>
                     </div>
                 </div>
@@ -253,6 +259,7 @@
             <p>Este es el contenido de la pestaña 4.</p>
         </div>
     </div>
+    
 
 
 
