--- a/views/financiacion.html
+++ b/views/financiacion.html
@@ -175,16 +175,16 @@
                 <div class="row">
                     <div class="question-container col-12 col-md-7 mt-5 text-center">
                         <div>
-                            <h3 class="oca-title ms-5">¿Quieres comprar un coche de ocasión?</h3>
+                            <h3 class="oca-title ">¿Quieres comprar un coche de ocasión?</h3>
                         </div>
                         <div>
-                            <p class="ms-5">
+                            <p class="">
                                 Busca en nuestro Stock el coche que más se ajuste a tus necesidades. Si no lo encuentras, no te
                                 preocupes, nosotros lo buscaremos por ti.
                             </p>
                         </div>
                     </div>
-                    <div class="btn-holder col-12 col-md-4 d-flex justify-content-center align-items-center">
+                    <div class="btn-holder col-12 col-md-4 mb-4 d-flex justify-content-center align-items-center">
                         <button class="btn btn-danger btn-stock">
                             <a class="link" href="">VER STOCK
                             </a>
