agregar tilde a financiacion

--- a/views/financiacion.html
+++ b/views/financiacion.html
@@ -71,7 +71,7 @@
             <div class="header-content-container">
                 <div class="title-container">
                     <h1>
-                        FINANCIACION
+                        FINANCIACIÓN
                     </h1>
                 </div>
                 <div class="description-header">
