--- a/views/financiacion.html
+++ b/views/financiacion.html
@@ -184,7 +184,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="btn-holder col-12 col-md-4 d-flex justify-content-center align-items-center">
+                    <div class="btn-holder col-12 col-md-4 mb-2 d-flex justify-content-center align-items-center">
                         <button class="btn btn-danger btn-stock">
                             <a class="link" href="">VER STOCK
                             </a>
