--- a/views/financiacion.html
+++ b/views/financiacion.html
@@ -58,7 +58,7 @@
                             <a class="link-pages nav-link" href="../index.html">Inicio</a>
                             <a class="link-pages nav-link" href="./stock.html">Stock DELTHA CARS</a>
                             <a class="link-pages nav-link" href="#">Financiación</a>
-                            <a class="link-pages nav-link" href="./about.html">Contacto</a>
+                            <a class="link-pages nav-link" href="./contact.html">Contacto</a>
                         </div>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
         <div class="oca-container d-flex align-items-center justify-content-center">
             <div class="back-color">
                 <div class="row">
-                    <div class="question-container col-12 col-md-7 mt-2 text-center">
+                    <div class="question-container col-12 col-md-7 mt-5 text-center">
                         <div>
                             <h3 class="oca-title ">¿Quieres comprar un coche de ocasión?</h3>
                         </div>
@@ -186,7 +186,7 @@
                     </div>
                     <div class="btn-holder col-12 col-md-4 mb-2 d-flex justify-content-center align-items-center">
                         <button class="btn btn-danger btn-stock">
-                            <a class="link" href="">VER STOCK
+                            <a class="link" href="./stock.html">VER STOCK
                             </a>
                         </button>
                     </div>
