--- a/css/financiacion.css
+++ b/css/financiacion.css
@@ -84,7 +84,7 @@
 .back-color{
     background-color: #dfdfdf;
     max-height: 360px;
-    min-height: 150px;
+    min-height: 200px;
     border-radius: 20px 20px 20px 20px;
     max-width: 1000px;
 }
@@ -94,11 +94,11 @@
     width: 200px;
     transition: 1s;
     font-size: 20px;
-    background-color: red;
+    background-color: rgb(255, 21, 21)(205, 47, 47);
 }
 
 .btn-stock:hover{
-    background-color: rgb(243, 243, 243);
+    background-color: rgb(255, 0, 0);
 }
 
 .link{
